--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.71.10",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
@@ -25,7 +27,10 @@
     "react-dom": "^18.0.0",
     "recharts": "^2.15.2",
     "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "viem": "^2.25.0",
+    "wagmi": "^2.14.16",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
